--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-    <!-- {{ pageTitle }} -->
+    {{ pageTitle }}
   </div>
   <div class="card-body">
     <div class="row">
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="table-responsive">
-      <table class="table">
+      <table class="table" *ngIf="products.length">
         <thead>
           <tr>
             <th>
@@ -29,17 +29,22 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr *ngFor="let product of products">
             <td>
-              <img />
+              <img
+                [src]="product.imageUrl"
+                [title]="product.productName"
+                [style.width.px]="imageWidth"
+                [style.margin.px]="imageMargin"
+              />
             </td>
             <td>
-              <a> </a>
+              {{ product.productName }}
             </td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>{{ product.productCode }}</td>
+            <td>{{ product.releaseDate }}</td>
+            <td>{{ product.price }}</td>
+            <td>{{ product.starRating }}</td>
           </tr>
         </tbody>
       </table>
