--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -6,12 +6,12 @@
     <div class="row">
       <div class="col-md-2">Filter by:</div>
       <div class="col-md-4">
-        <!-- <input type="text" [(ngModel)]="listFilter" /> -->
+        <input type="text" [(ngModel)]="listFilter" />
       </div>
     </div>
     <div class="row">
       <div class="col-md-6">
-        <h4>Filtered by:</h4>
+        <h4>Filtered by: {{ listFilter }}</h4>
       </div>
     </div>
     <div class="table-responsive">
@@ -19,7 +19,9 @@
         <thead>
           <tr>
             <th>
-              <button class="btn btn-primary">Show Image</button>
+              <button class="btn btn-primary" (click)="toggleImage()">
+                {{ showImage ? "Hide" : "Show" }} Image
+              </button>
             </th>
             <th>Product</th>
             <th>Code</th>
@@ -29,9 +31,10 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let product of products">
+          <tr *ngFor="let product of filteredProducts">
             <td>
               <img
+                *ngIf="showImage"
                 [src]="product.imageUrl"
                 [title]="product.productName"
                 [style.width.px]="imageWidth"
@@ -41,9 +44,11 @@
             <td>
               {{ product.productName }}
             </td>
-            <td>{{ product.productCode }}</td>
+            <td>
+              {{ product.productCode | lowercase | convertToSpaces: "-" }}
+            </td>
             <td>{{ product.releaseDate }}</td>
-            <td>{{ product.price }}</td>
+            <td>{{ product.price | currency: "USD":"symbol":"1.2-2" }}</td>
             <td>{{ product.starRating }}</td>
           </tr>
         </tbody>
